# ft_irc

./: CMakeLists.txt  README.md  a.out  forward.cpp  select.cpp
jay_irc/: Makefile  ircserv
jay_irc/inc/: channel.hpp  client.h  client.hpp  ft_server.hpp  main.h  message.hpp  responses.hpp  server.hpp  session.hpp  util.hpp
jay_irc/src/: channel.cpp  client.cpp  command.cpp  ft_server.cpp  main.cpp  message.cpp  server.cpp  session.cpp  util.cpp
ref_git/avann/conf/: irc1.conf
ref_git/godvenniek/: .gitignore
ref_git/seunyel/: ircserv
test/: Makefile  ircserv
test/inc/: test.h
test/src/: ft_server.cpp  test.cpp
webserv/: client.cpp  server.cpp
